[package]
name = "rs-es"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-es = { version = "0.12.3", features = ["es5"] }
elasticsearch = "7.14.0-alpha.1"
tokio = { version = "1.20", features = ["full"] }

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

